# host_dchen4_au

./: .gitignore  Cargo.toml  database.db
.cargo/: config.toml
assets/: index.html
migrations/2023-09-08-105457_create_users/: up.sql
mips-deps/lib/: libsqlite3.la
mips-deps/lib/pkgconfig/: sqlite3.pc
src/: database_handler.rs  lib.rs  main.rs  schema.rs  templating.rs
