[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web= "4"
env_logger = "0.10.0"
#openssl = "0.10.57"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
actix-multipart = "0.6.1"
#git token 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